2009-07-30  Guillaume Quintard  <guillaume.quintard@gmail.com>

	reviewed by: arek

	* flumotion/component/misc/httpserver/localprovider.py:
	Handles the case where a directory of the path is actually a file, so 
	httpserver returns a 404 error and not a 500 one.

2009-07-29  Guillaume Quintard  <guillaume.quintard@gmail.com>

	reviewed by: jlegoff

	* flumotion/test/test_component_httpserver.py:
	Adds testNotFound that check we actually get a 404 for an non-existing 
	ressource. Plus reactivate testRangeTooBig as it seems to pass

2009-07-27  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/component/producers/firewire/wizard.glade:
	Some glade tweaking so the window size and the message view don't affect
	the firewire step appearance.

2009-07-27  Guillaume Quintard  <guillaume.quintard@gmail.com>

	reviewed by: sebastien

	* README: updated to use playbin2 and follow the assistant defaults

2009-07-27  Josep Joan Ribas  <jribas@flumotion.com>

	* flumotion/ui/fileselector.py:
	Add fallback to generic file icon.

2009-07-27  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: jlegoff

	* flumotion/worker/checks/check.py:
	Add a worker check for media files. Missing from r8025.

2009-07-27  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: jlegoff

	* data/image/wizard/Makefile.am:
	* data/image/wizard/looper.png (added):
	* flumotion/component/producers/looper/Makefile.am:
	* flumotion/component/producers/looper/looper.xml:
	* flumotion/component/producers/looper/wizard.glade (added):
	* flumotion/component/producers/looper/wizard_gtk.py (added):
	Add looper to the production page in the Wizard. Fixes #834.


2009-07-24  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/test/test_component_httpserver.py:
	Obviously cortado is not going to be installed always. Install a
	modified getCortadoFilename method to correct this.

2009-07-24  Xavier Queralt  <xqueralt@flumotion.com>

	reviewed by: Jan

	* flumotion/component/plugs/cortado/cortado.py: