@@ -1,3 +1,12 @@
+2009-07-31  Guillaume Quintard  <guillaume.quintard@gmail.com>
+
+	reviewed by: xmartinez 
+
+	* flumotion/test/test_component_httpserver.py:
+	Removes testNotFound and adds a new class (TestNotFound) to cover
+	http.NOT_FOUND errors.
+	Note: shutil is now an import (used to clean the temp directory)
+
 2009-07-30  Guillaume Quintard  <guillaume.quintard@gmail.com>
 
 	reviewed by: arek
